# sec_mcptest

./: README.md  Streamlittest.ipynb  WINDOWS_SETUP.md  api_server.py  main.py  mcp_server.py  mcp_server_fastmcp.py  pyproject.toml  setup_instructions.md
data/: health_sg.dbf  health_sg.geojson  health_sg.shp  health_sg.shx  hospitals_sg.dbf  hospitals_sg.shp  hospitals_sg.shx
docs/: ai-coding-tools-installation.md  fastmcp_guide.md  mcp_overview.md
