[project]
name = "sec-mcptest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "streamlit>=1.47.1",
    "streamlit-folium>=0.25.1",
]
