[project]
name = "sec-mcptest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "streamlit>=1.47.1",
    "streamlit-folium>=0.25.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "redis>=4.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "fastmcp>=0.3.0",
]

[project.scripts]
api-server = "api_server:main"
streamlit-app = "main:main"
mcp-server = "mcp_server:main_sync"
mcp-server-fast = "mcp_server_fastmcp:main"

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
